       This behavior matches that currently used by IE and Navigator.
    3. The regression test "pseudo-server" do not appear to run properly under JDK 1.4

Limitations:
    1. HttpUnit does not support JavaScript
    2. JDK 1.2 or higher is required
    3. ServletUnit does not support JSP


Revision History:
23-Jun-2002
Acknowledgements:
    Thanks to Steve Heath for an example on how to make JSPs work with ServletUnit.

Additions:
    1. ServletUnit now supports ServletContext.getRealPath
    2. ServletUnit now supports JSPs using Jasper. By default, JSPs are expected to be in the current working directory.
       If an external web.xml file is specified, JSPs will be searched for in the application context directory.

20-Jun-2002 1.4.1
Acknowledgements:
    Thanks to Stefan Renz for finding the file control value bug and providing a fix.
    Thanks to Frank Carver for extending base 64 encoding to handle character values > 127.
    Thanks to Yassen Damyanov for fixing a bug in the handling response headers
    Thanks to James Murty for adding caching of servlet instances and some XML parsing cleanup.
    Thanks to Robert Watkins for the content length test.
    Thanks to Jessica Sant for correcting the handling of error statuses in JDK 1.3.1-03

Problems fixed:
    1. Trying to get the value of a file parameter no longer results in a null pointer exception.
    2. Passwords with character values > 127 are now handled.
    3. Parameters were not being submitted for image buttons with no specified value
    4. Response headers were truncated to the first word only
    5. The servletunit tutorial failed with a NullPointerException in the first step.
    6. bug #570644: As of JDK 1.3.1-03, the behavior of HttpURLConnection was changed to throw an IOException when an
       error status is returned. This broke HttpUnit's handling of error codes. This has since been corrected.

Additions:
    Content and parsing additions