@@ -5,6 +5,7 @@ junit   3.7
 servlet 2.3
 xerces  1.2.3
 jtidy   04aug2000r7
+rhino   1.5R3
 
 (for testing HttpUnit only)
 mail        (javamail 1.2)
